--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+
+@import '~antd/dist/antd.css';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,7 +10,6 @@ body {
   padding: 0px;
   background-color: #f7f7f7;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
