--- a/src/components/pages/dashboard/client/_client.scss
+++ b/src/components/pages/dashboard/client/_client.scss
@@ -1,12 +1,37 @@
 .container-clients{
     .auto-margin{
-        margin:0 20px;
+        margin-left: 40px;
+        .breadcrumb{
+            margin-top: 20px;
+            button{
+                float: right;
+                margin-right: 40px;
+                color: white;
+                border-radius: 10px;
+                background-color: #00beff;
+                border: none;
+                font-size: 20px;
+                width: 170px;
+                height: 50px;
+            }
+        }
         .container-card{
             display: flex;
             flex-wrap: wrap;
+            justify-content: flex-start;
             >div{
-                width: 300px;
-    
+                width: 400px;
+                margin-top: 40px;
+                margin-right: 40px;
+                .btn{
+                    font-size: 17px;
+                    margin-top: 10px;
+                    padding:6px;
+                    width: 110px;
+                }
+                .btn-message{
+                    margin-right: 15px;
+                }
             }
         }
     }
