--- a/src/components/pages/dashboard/client/_addclient.scss
+++ b/src/components/pages/dashboard/client/_addclient.scss
@@ -45,6 +45,7 @@
             }
             
             input{
+                height: 50px;
                 width: 100%;
             }
         }
