--- a/src/components/pages/employees/_addemployee.scss
+++ b/src/components/pages/employees/_addemployee.scss
@@ -1,4 +1,4 @@
-.alert-add-client{
+.alert-add-employee{
     text-align: center;
     margin:auto;
     width: 60%;
@@ -41,6 +41,9 @@
                 div{
                     width: 100%;
 
+                }
+                input{
+                    height: 50px;
                 }
             }
             
