--- a/src/components/pages/dashboard/profile/_profile.scss
+++ b/src/components/pages/dashboard/profile/_profile.scss
@@ -24,12 +24,20 @@
                 min-width: 390px;
                 display: flex;
                 width: 40%;
+                .im-avatar{
+                    border-radius: 50%;
+                    width: 150px;
+                    height: 150px;
+                }
                 .right{
                     margin-left: 20px;
                     min-width: 231px;
                     .ceo{
                         margin-top: 5px;
                         opacity: 0.5;
+                    }
+                    .employeeID{
+                        font-weight: bold;
                     }
                     button{
                         background-image: linear-gradient(to right,#00bdfe,#2f6ee4, #3e10d0);
@@ -65,6 +73,10 @@
             .detail-person{
                 width: 60%;
                 display: flex;
+                &-item-l{
+                    width: 50%;
+                    min-width: 100px;
+                }
             }
         }
         .project{
@@ -126,14 +138,24 @@
                 }
                 .project-leader{
                     margin-top: 10px;
+                    img{
+                        border-radius: 50%;
+                        width: 30px;
+                        height: 30px;
+                    }
 
                 }
                 .deadline{
                     margin-top: 10px;
                 }
                 .team{
-                    div{
+                    .team-img{
                         display: flex;
+                        img{
+                            border-radius: 50%;
+                            width: 20px;
+                            height: 20px;
+                        }
                     }
                 }
                 .progress{
@@ -153,6 +175,11 @@
             }    
         }
 
+    }
+    @media (max-width:540px) {
+        .auto-margin{
+            padding:0 5px;
+        }
     }
     
     
