--- a/src/components/pages/dashboard/_index.scss
+++ b/src/components/pages/dashboard/_index.scss
@@ -6,31 +6,7 @@
             margin-top: 20px;
             display: flex;
             justify-content: space-between;
-            .antd-card{
-                width: 32%;
-                    .dash-widget-icon{
-                        width: 60px;
-                        height: 60px;
-                        float: left;
-                        font-size: 25px;
-                        color: #00c5fb;
-                        border-radius: 50%;
-                        background-color: #d4f3ff;
-                        text-align: center;
-                        line-height: 60px;
-                    span{
-                        margin:0 auto;
-                    }
-                }
-                .dash-widget-infor{
-                    float: right;
-                }
-            }
-            @media (max-width:540px) {
-                .antd-card{
-                    width: 33,3333333%;
-                }
-            }
+  
         }
         .row-true{
             margin-top: 20px;
@@ -78,8 +54,9 @@
                  padding-top: 4px;
                 }
                 table{
-                    width: calc(100% -20px);
+                    width: calc(100% - 20px);
                     margin-left: 20px;
+                    // margin-right: 20px !important;
                     tr{
                        .setWidth{
                            width: 31%;
